<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/joinTitleTextView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/design_default_color_secondary_variant"
        android:gravity="center"
        android:text="@string/join_room"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/joinEditText"
        style="@style/TextAppearance.AppCompat.Normal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/enter_key"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/joinTitleTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/joinGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:id="@+id/joinButtonEnter"
        style="@style/TextAppearance.AppCompat.NormalWhite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/enter"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/joinGuideline"
        app:layout_constraintTop_toBottomOf="@id/joinEditText" />

    <Button
        android:id="@+id/joinButtonCancel"
        style="@style/TextAppearance.AppCompat.NormalWhite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/joinGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/joinEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>