<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="350dp">

    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_vending_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/locationTextView"
        style="@style/TextAppearance.AppCompat.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/need_location"
        app:layout_constraintTop_toBottomOf="@id/locationImageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/locationGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:id="@+id/btnGrantPermission"
        style="@style/TextAppearance.AppCompat.NormalWhite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF7237"
        android:text="@string/grant_permission"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/locationGuideline"
        app:layout_constraintTop_toBottomOf="@id/locationTextView" />

    <Button
        android:id="@+id/btnRejectLocation"
        style="@style/TextAppearance.AppCompat.NormalWhite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B00020"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/locationGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>